--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -10,6 +10,11 @@ python-dotenv==1.0.0
 pydantic[email]<2.0
 passlib[argon2]==1.7.4
 argon2-cffi==23.1.0
+pytest-mock 
+httpx
+pytest
+python-dotenv>=1.0
+pytest pytest-asyncio httpx
 
 # Old:
 # fastapi>=0.115.0
