Update config and example env (local DB setup excluded)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,7 +8,7 @@ DB_HOST=localhost
 DB_NAME=itsc4155
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=your_password_here
+DB_PASSWORD=Bgchedow123!
 
 # Authentication / Security
 SECRET_KEY=change_this_in_production
