--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ pip-wheel-metadata/
 
 # ---- FastAPI backend ----
 backend/.env
+backend/.env.example
 backend/__pycache__/
 backend/venv/
 backend/.pytest_cache/
