--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,8 @@ build/
 pip-wheel-metadata/
 
 # ---- FastAPI backend ----
-backend/.env
-backend/.env.example
+# backend/.env
+# backend/.env.example
 backend/__pycache__/
 backend/venv/
 backend/.pytest_cache/
