--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -15,9 +15,8 @@ httpx
 pytest
 python-dotenv>=1.0
 pytest-asyncio
-httpx
-pytest pytest-asyncio httpx
-"httpx<0.25"
+# httpx
+httpx<0.25
 pytest-cov
 
 # Old:
