--- a/backend/.env
+++ b/backend/.env
@@ -8,7 +8,7 @@ DB_HOST=localhost
 DB_NAME=itsc4155
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=Kbehe@13
+DB_PASSWORD=Cubeskull31!
 SECRET_KEY=mysecretkey123
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
